syntax = "proto3";

package pb;

option go_package = "pb";

import "google/api/annotations.proto";

service Revtr {
  rpc RunRevtr(RunRevtrReq) returns (RunRevtrResp) {
    option(google.api.http) = {
      post: "/api/v2/revtr"
      body: "*"
    };
  }
  rpc GetRevtr(GetRevtrReq) returns (GetRevtrResp) {
    option(google.api.http) = {
      get: "/api/v2/revtr/{batch_id}",
    };
  }
  rpc GetSources(GetSourcesReq) returns (GetSourcesResp) {
    option(google.api.http) = {
      get: "/api/v2/sources",
    };
  }
}

message RevtrMeasurement {
    string src             = 1;
    string dst             = 2;
    uint32 staleness       = 3;
    uint32 id              = 4;
      bool backoff_endhost = 5;
}

message RunRevtrReq {
  repeated RevtrMeasurement revtrs  = 1;
  string auth = 2;
}

message RunRevtrResp {
  uint32 batch_id   =  1;
}

message GetRevtrReq {
  uint32 batch_id =  1;
  string auth = 2;
}

message GetRevtrResp {
  repeated ReverseTraceroute revtrs = 1; 
}

message GetSourcesReq {
  string auth = 1;
}

message GetSourcesResp {
  repeated Source srcs =  1;
}

message Source {
  string hostname =  1;
  string ip       =  2;
}

message ReverseTraceroute {
  RevtrStatus status     =  1; 
  string src             =  2;
  string dst             =  3;
  int64 runtime          =  4;
  int32 rr_issued        =  5;
  int32 ts_issued        =  6;
  string stop_reason     =  7;
  string date            =  8;
  repeated RevtrHop path =  9;
  uint32 id              = 10;
  string fail_reason     = 11;
}

message RevtrHop {  
    string hop        = 1;
    RevtrHopType type = 2;
}

enum RevtrHopType {
  DUMMY                                         = 0;
  DST_REV_SEGMENT                               = 1;
  DST_SYM_REV_SEGMENT                           = 2;
  TR_TO_SRC_REV_SEGMENT                         = 3;
  RR_REV_SEGMENT                                = 4;
  SPOOF_RR_REV_SEGMENT                          = 5;
  TS_ADJ_REV_SEGMENT                            = 6;
  SPOOF_TS_ADJ_REV_SEGMENT                      = 7;
  SPOOF_TS_ADJ_REV_SEGMENT_TS_ZERO              = 8;
  SPOOF_TS_ADJ_REV_SEGMENT_TS_ZERO_DOUBLE_STAMP = 9;
}

enum RevtrStatus {
  DUMMY_X     = 0;
  RUNNING     = 1;
  COMPLETED   = 2;
  CANCELED    = 3;
}

message RevtrUser {
  uint32 id    =  1;
  string name  =  2;
  string email =  3;
  uint32 max   =  4;
  uint32 delay =  5;
  string key   =  6; 
}